# cerebras

./: DEPLOYMENT.md  Dockerfile.backend  README.md  cerebras-1.code-workspace  docker-compose.yml  main.py  package-lock.json  package.json  render.yaml
CerebrasApp/: DEPLOYMENT.md  README.md  cerebras-1.code-workspace  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
CerebrasApp/ai/: openrouter_client.py
CerebrasApp/backend/: package-lock.json  package.json  parseCsv.js  server.js  server.test.js  test.csv
CerebrasApp/backend/utils/: cerebrasService.js  cerebrasService.test.js  extractData.js  extractTransactions.js  parseCsv.js  parsePdf.js
CerebrasApp/db/: supabase_client.py
CerebrasApp/frontend/: .dockerignore  Dockerfile.frontend  package-lock.json  package.json
CerebrasApp/frontend/public/: index.html  manifest.json
CerebrasApp/frontend/src/: App.js  index.js
CerebrasApp/frontend/src/components/: Analysis.js  CategoryBreakdown.js  FileUpload.js  TransactionChart.js
CerebrasApp/frontend/src/pages/: Analysis.js  Upload.js
CerebrasApp/nginx/conf/: default.conf
CerebrasApp/src/api/routes/: ai.py
CerebrasApp/src/core/: config.py
CerebrasApp/src/models/: schemas.py
CerebrasApp/src/services/: ai.py  payment.py
ai/: cerebras_client.py  openrouter_client.py
archive/: analyze-response.json  check-structure.ps1  package-lock.json  package.json  render.yaml
backend/: README.md  package.json  server.test.js
backend/utils/: parseCsv.js  (+1 more)
frontend/: Dockerfile.frontend
payments/: stripe_client.py
src/: main.py
(+16 files in other folders)
